More words for DPC.

--- a/public/InterfaceSegregationDPC/index.html
+++ b/public/InterfaceSegregationDPC/index.html
@@ -2109,7 +2109,7 @@ class ArrayVariableMap implements VariableMap
   </blockquote>
 
   <blockquote class="emnormal">
-    “Choices that result in long term 'ease of use' are better than choices that bring temporary ego boosts.” - DanAck
+    “In the long term 'easy' is much more valuable than short-term ego boosting things.” - DanAck
   </blockquote>
 
 
