--- a/public/GoodOrBad_DPC/index.html
+++ b/public/GoodOrBad_DPC/index.html
@@ -75,7 +75,7 @@
 
     h1, h2, h3, h4, h5 {
       font-family: "Quicksand", sans-serif !important;
-      font-weight: 200 !important;
+      font-weight: 400 !important;
       /*text-transform: uppercase; */
     }
 
@@ -490,7 +490,6 @@
       </div>
 
 
-
       <aside class="notes">
         Telling good from bad is hard is two separate ways
       </aside>
@@ -567,32 +566,36 @@
 
 
   <aside class="notes">
-    Humans instinctively find some things draw
-
-    You can however teach yourself to appreciate other aesthetics.
+    <p>
+      Humans instinctively find some things attractive
+    </p>
+    <p>Some of these things can be changed.</p>
+    <p>
+      You can however teach yourself to appreciate other aesthetics.
+    </p>
   </aside>
 </section>
 
 
 <!-- *************************** -->
-<section>
-  <h2>Kintsugi</h2>
-  <div style="text-align: center !important;" >
+<section style="text-align: center !important;">
+  <h1>Kintsugi</h1>
+  <div  >
     <img src="/images/kintsugi_pot.jpg" width="40%" />
   </div>
 
-  <p>https://en.wikipedia.org/wiki/Kintsugi</p>
+  <!-- <p>https://en.wikipedia.org/wiki/Kintsugi</p> -->
 
   <aside class="notes">
     This can be seen as a rationale for keeping an object around even
     after it has broken and as a justification of kintsugi itself,
     highlighting the cracks and repairs as simply an event in the life of
     an object rather than allowing its service to end at the time of its
-    damage or breakage.[12]
+    damage or breakage.
 
     Kintsugi can relate to the Japanese philosophy of "no mind" (無心
     mushin), which encompasses the concepts of non-attachment, acceptance
-    of change and fate as aspects of human life.[13]
+    of change and fate as aspects of human life.
 
   </aside>
 </section>
@@ -615,7 +618,7 @@
 
     The aesthetic is sometimes described as one of beauty that is "imperfect, impermanent, and incomplete".
 
-    It celebrates things that are good enough to do their job,
+    It celebrates things that are good enough to do their job, not to be shiny.
   </aside>
 </section>
 
@@ -635,9 +638,12 @@
 
 
   <aside class="notes">
-    Wabi-sabi is derived from the Buddhist teaching of the three marks of existence
-
-    I think we've all been on projects where we've felt these things.
+    <p>
+      Wabi-sabi is derived from the Buddhist teaching of the three marks of existence
+    </p>
+    <p>
+      I think we've all been on projects where we've felt these things.
+    </p>
   </aside>
 </section>
 
@@ -1011,7 +1017,7 @@ sadness about this state being the reality of life.
 <!-- *************************** -->
 <section>
 
-  <h2>English - hard to give offense accidentally.</h2>
+  <h2>English - hard to give offense accidentally</h2>
 
   <ul>
     <li>With all due respect....</li>
