--- a/public/InterfaceSegregationDPC/index.html
+++ b/public/InterfaceSegregationDPC/index.html
@@ -235,6 +235,8 @@
     <p>
         <a href="http://twitter.com/MrDanack">@MrDanack</a>
     </p>
+    <p>Slides are at docs.basereality.com</p>
+
     <p class="subtle" style="padding-top: 100px">
       <small>Press 'c' to toggle code style</small><br/>
       <small>Press 's' for speaker notes</small>
