--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,12 @@
 
 <a href="https://twitter.com/MrDanack">Twitter</a>
   
-<h2>Talks</h2>
+<h2>DPC</h2>
+
+<a href="/GoodOrBad_DPC/">Good or bad - making choice is hard DPC, June 7th 2019</a> <br/>
+<a href="/InterfaceSegregationDPC/">Interface Segregation - DPC, June 8th 2019 </a> <br/>
+
+<h2>Previous talks</h2>
 
 
 <a href="/DITalk/">Dependency injection the right way</a> <br/>
@@ -37,8 +42,7 @@
 
 <h2>Draft talks</h2>
 
-<a href="/GoodOrBad_DPC/">Good or bad - making choice is hard DPC, June 7th 2019</a> <br/>
-<a href="/InterfaceSegregationDPC/">Interface Segregation - DPC, June 8th 2019 </a> <br/>
+
 
 <a href="/SolidStructure/">Solid structure</a> <br/>
 
