--- a/public/GoodOrBad_DPC/index.html
+++ b/public/GoodOrBad_DPC/index.html
@@ -1293,7 +1293,7 @@ r.class  # => Rational</code></pre>
 <section class="em2">
   <h2>Some things take effort</h2>
 
-  <img src="/images/KFC_1.jpg" width="50%" />
+  <img src="/images/KFC.jpg" width="50%" />
   <aside class="notes">
   </aside>
 </section>
@@ -1698,6 +1698,9 @@ sadness about this state being the reality of life.
     <p class="centre">Twitter: @MrDanack</p>
   </div>
 
+  <p>
+  Tshirt: https://teespring.com/php-thor-mjolnir
+  </p>
 
   <aside class="notes">
     <p>
