--- a/public/GoodOrBad_DPC/index.html
+++ b/public/GoodOrBad_DPC/index.html
@@ -1293,7 +1293,7 @@ r.class  # => Rational</code></pre>
 <section class="em2">
   <h2>Some things take effort</h2>
 
-  <img src="/images/KFC.jpg" width="50%" />
+  <img src="/images/KFC_otw.jpg" width="50%" />
   <aside class="notes">
   </aside>
 </section>
