--- a/public/index.html
+++ b/public/index.html
@@ -19,40 +19,40 @@
 <h2>DPC</h2>
 
 <a href="/GoodOrBad_DPC/">Good or bad - making choice is hard DPC, June 7th 2019</a> <br/>
-<a href="/InterfaceSegregationDPC/">Interface Segregation - DPC, June 8th 2019 </a> <br/>
+<!--<a href="/InterfaceSegregationDPC/">Interface Segregation - DPC, June 8th 2019 </a> <br/>-->
 
-<h2>Previous talks</h2>
-
-
-<a href="/DITalk/">Dependency injection the right way</a> <br/>
-<a href="/ValueCaseForUnitTests/">The value case for unit tests</a> - <a href="https://www.youtube.com/watch?v=wb7tc0IxkyI">video</a> <br/>
-<a href="/pdf/Composer_TheGoodTheBadAndTheUgly.pdf">Composer - the good, the bad and the ugly</a> <br/>
-<a href="/pdf/PHP_Traits.pdf">PHP Traits</a> <br/>
-<a href="/InterfaceSegregation/">Interface Segregation - for better code</a> April 13th 2016, PHPSW <br/>
-<a href="/InterfaceSegregationLong/">Interface Segregation - for better code</a> - May 16th 2016 PHPBerks <br/>
-<a href="/GranularConfig/">Granular config</a> - September 21st 2016<br/>
-<a href="/InterfaceSegregationPHPNW/">Interface Segregation</a> - PHPNW, <a href="https://joind.in/event/php-north-west-2016/interface-segregation---the-forgotten-i-in-solid">October 1st, 2016</a><br/>
-<a href="/InterfaceSegregationPortsmouth/">Interface Segregation</a> - Portsmouth, October 12th, 2017<br/>
-
-<a href="/ReactJsIntro/">React JS intro</a> <br/>
-<a href="/GoodOrBad/">Good or bad - making choice is hard</a> 14th March 2018 PHPSW<br/>
-<a href="/DockerMistakes/">Docker Mistakes</a> 10 October 2018 PHPSW<br/>
-
-<a href="/InterfaceSegregationCardiff/">Interface Segregation - Cardiff, February 28th 2019 </a> <br/>
-
-<h2>Draft talks</h2>
+<!--<h2>Previous talks</h2>-->
 
 
+<!--<a href="/DITalk/">Dependency injection the right way</a> <br/>-->
+<!--<a href="/ValueCaseForUnitTests/">The value case for unit tests</a> - <a href="https://www.youtube.com/watch?v=wb7tc0IxkyI">video</a> <br/>-->
+<!--<a href="/pdf/Composer_TheGoodTheBadAndTheUgly.pdf">Composer - the good, the bad and the ugly</a> <br/>-->
+<!--<a href="/pdf/PHP_Traits.pdf">PHP Traits</a> <br/>-->
+<!--<a href="/InterfaceSegregation/">Interface Segregation - for better code</a> April 13th 2016, PHPSW <br/>-->
+<!--<a href="/InterfaceSegregationLong/">Interface Segregation - for better code</a> - May 16th 2016 PHPBerks <br/>-->
+<!--<a href="/GranularConfig/">Granular config</a> - September 21st 2016<br/>-->
+<!--<a href="/InterfaceSegregationPHPNW/">Interface Segregation</a> - PHPNW, <a href="https://joind.in/event/php-north-west-2016/interface-segregation-&#45;&#45;the-forgotten-i-in-solid">October 1st, 2016</a><br/>-->
+<!--<a href="/InterfaceSegregationPortsmouth/">Interface Segregation</a> - Portsmouth, October 12th, 2017<br/>-->
 
-<a href="/SolidStructure/">Solid structure</a> <br/>
+<!--<a href="/ReactJsIntro/">React JS intro</a> <br/>-->
+<!--<a href="/GoodOrBad/">Good or bad - making choice is hard</a> 14th March 2018 PHPSW<br/>-->
+<!--<a href="/DockerMistakes/">Docker Mistakes</a> 10 October 2018 PHPSW<br/>-->
+
+<!--<a href="/InterfaceSegregationCardiff/">Interface Segregation - Cardiff, February 28th 2019 </a> <br/>-->
+
+<!--<h2>Draft talks</h2>-->
 
 
-<h2>PHP RFC</h2>
-<a href="https://wiki.php.net/rfc/internal_constructor_behaviour">Constructor behaviour of internal classes</a> - passed PHP 7.0 <br/>
-<a href="https://wiki.php.net/rfc/closurefromcallable">Closure from callable</a> - passed PHP 7.1 <br/>
-<a href="https://wiki.php.net/rfc/get_class_disallow_null_parameter">get_class() disallow null parameter </a> - PHP 7.2 <br/>
-<a href="https://wiki.php.net/rfc/consistent_callables">Consistent Callables</a> - for PHP 8.0<br/>
-<a href="https://gist.github.com/Danack/5ae0b1b1ce30a0d785dd">Improved error control operator</a> - draft<br/>
+
+<!--<a href="/SolidStructure/">Solid structure</a> <br/>-->
+
+
+<!--<h2>PHP RFC</h2>-->
+<!--<a href="https://wiki.php.net/rfc/internal_constructor_behaviour">Constructor behaviour of internal classes</a> - passed PHP 7.0 <br/>-->
+<!--<a href="https://wiki.php.net/rfc/closurefromcallable">Closure from callable</a> - passed PHP 7.1 <br/>-->
+<!--<a href="https://wiki.php.net/rfc/get_class_disallow_null_parameter">get_class() disallow null parameter </a> - PHP 7.2 <br/>-->
+<!--<a href="https://wiki.php.net/rfc/consistent_callables">Consistent Callables</a> - for PHP 8.0<br/>-->
+<!--<a href="https://gist.github.com/Danack/5ae0b1b1ce30a0d785dd">Improved error control operator</a> - draft<br/>-->
 
 <h2>Blog</h2>
 
